# greedy-snake-practice-project

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODO.md
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/net/zhiji/snake/: GameActivity.java
android/app/src/main/jni/: Application.mk
android/app/src/main/jni/SDL_lib/: Android.mk
android/app/src/main/jni/dearimgui/: Android.mk
android/app/src/main/jni/src/: Android.mk  debug_loader.c  main.cpp
android/app/src/main/jni/stb/: Android.mk  stb_image.cpp
android/app/src/main/res/values/: styles.xml
build-scripts/: build-test-app.sh  build-test-loader.sh  follow-log-file.py  hide-jni.sh  readme.md
code/: AppState.cpp  AppState.hpp  Common.hpp  Food.cpp  Food.hpp  GamePage.cpp  GamePage.hpp  HelloPage.cpp  HelloPage.hpp  Page.cpp  Page.hpp  PageManager.cpp  PageManager.hpp  ScoreManager.cpp  ScoreManager.hpp  SimpleImage.hpp  Snake.cpp  Snake.hpp  TileMap.cpp  TileMap.hpp  Wall.cpp  Wall.hpp  main.cpp  stb_image.cpp
